--- a/ingress.yaml
+++ b/ingress.yaml
@@ -11,7 +11,7 @@ spec:
   rules:
     - http:
         paths:
-        - path: /
+        - path: /time
           pathType: Prefix
           backend:
             service:
